public class Course {
    Lane leftLane;
    Lane midLane;
    Lane rightLane;


    Course(Lane leftLane, Lane midLane, Lane rightLane){
        this.leftLane = leftLane;
        this.midLane = midLane;
        this.rightLane = rightLane;

    }
}
