public class Gem {
    int position;
    
}
