public abstract class Obstacles {

    int numberOfObstacles;
    int position;
    float speed = 2;
    float yPosition;

    public float getYPosition() {
        return yPosition;
    }

}
