public class Projectiles {
    private int size;
    private int speed;
    private int position;
    private int fireRate;

    public Projectiles(int size, int fireRate, int position){
        this.size = size;
        this.fireRate = fireRate;
        this.position = position;
        //todo: this.speed = lav speed
        
    }
    public void onImpact(){

    }
}
