@startuml
'https://plantuml.com/class-diagram


!pragma layout smetana

class Main{
- Game game
+ static void main()
+settings()
+setup()
+ draw()
+ keyPressed()
}

class Game{
- fileIO
- TextUI
- int weaponCountdown
-Arraylist<String> leaderboard

+displayLeaderboard()
+ mainMenu()
+ Start game()
+ Quit game()
+ drawCourse()
+ moveRight()
+ moveLeft()
}


package "model"{
class Player{
- int xPosition
- int score
- boolean weapon
- int position

+ pickUpWeapon()
+ switchLaneRight()
+ switchLaneLeft()
+ onKill()
+ gemPickup()
+ onImpact()
}
class Lane{
- int height
- int width
- int xPosition


+spawnWeapon()
+spawnGem()
+spawnObstacles()
spawnObstacles()

}

class Course{
- Lane left
- Lane mid
- Lane right

+ Course(Lane left, Lane mid, Lane right )
}

interface Obstacles{
- int numberOfObstacles
- int position
- int speed
}

class ShootableObstacles{
- int health
+ onDeath()
}
class NonShootableObstacles

interface Weapon{
- int runTime
- int damage
- int position
- int speed


+ shoot()
}
class Revolver
class Rifle
class Shotgun
class RPG

class Projectiles{

-int size
-int speed

- int size
- int speed
- int position

+impact()
}
class Gem{

-int position

- int position
- int speed
}


}
package "util" {
class FileIO{
- Scanner scanner
- File file
+ readLeaderboardData(String path)
+ void saveLearderboardData(String path, ArrayList<Player> players)
}
class TextUI{
+ String getInput(String msg)
- Scanner scanner
+ void displayMessage(String msg)
}
}

Main*--Game
Game*--Player
Game*--Course
Game*--FileIO
Game*-- TextUI
Course *-- Lane
Obstacles<|-- ShootableObstacles
Player*-- Obstacles
Lane *--Obstacles
Obstacles<|-- NonShootableObstacles
Player *-- Weapon
Player*-- Lane
Lane *-- Weapon
Weapon *-- Projectiles
Weapon<|-- Revolver
Weapon<|-- Rifle
Weapon<|-- Shotgun
Weapon<|-- RPG
Lane *--Gem
Player*-- Gem


@enduml